@startuml
class InventoryApp{
    main()
    start()
}
class FileHandler{

    +saveTSV()
    +saveHTML()
    +saveJSON()

    +loadTSV()
    +loadHTML()
    +loadJSON()

    +readLines()
    +convertObserv2JSON()
    +readJson()
}
class InventoryMainController{
    -LinkedList<String> serialList

    +initialize()

    +addItem()
    +deleteClicked()
    +deleteListItem()

    +configureFileChooser()

    +saveInventoryListClick()
    +saveInventoryList()

    +loadListClick()
    +loadList()

    +makeFilteredList()
    +checkSerialDuplicate()
}
class Item{
    -SimpleStringProperty price
    -SimpleStringProperty name
    -SimpleStringProperty serialNumber

    +priceProperty()
    +productNameProperty()
    +serialNumberProperty()

    +setPrice()
    +setSerialNumber()
    +setProductName()

    +equals()
    +hashcode()
    +toString()
}
class jsonItem{
    +String price
    +String productName
    +String serialNumber
}
InventoryApp -- InventoryMainController
InventoryMainController -- FileHandler
InventoryMainController -- Item
FileHandler -- Item
FileHandler -- jsonItem
@enduml